--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ dmypy.json
 
 .vs/
 .vscode/
+
+# Visual Studio artifacts 
+src/CSharp/bin
+src/CSharp/obj
+src/CSharp/TestResults
+src/CSharp/UnitTests/bin
+src/CSharp/UnitTests/obj
